---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.1.3
Date: 2025-02-04
  Changes:
    - Remove log statements. Fix missing license file.
---------------------------------------------------------------------------------------------------
Version: 1.1.2
Date: 2025-02-03
  Changes:
    - Support for mods changing the overall scale of space connections.
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-02-03
  Changes:
    - Algorithm updated to suppress radial paths less heavily.
    - Fixed the thin-angle filtering code from removing more paths than intended.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-02-03
  Changes:
    - Respect for the Triangle Inequality: If a route between two locations is longer or equal to another path between the same two locations, the route is deleted.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2025-02-03
  Changes:
    - Fixed the icons for space connections.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2025-02-03
  Changes:
    - Since there is a community map using Tiered-Solar-System and Planetary-Distance-Adjustments, the incompatibility with Planetary-Distance-Adjustments has been removed — the latter mod now simply has no effect if Redrawn Space Connections is installed.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-02-02
  Changes:
    - Description update.