@@ -2,6 +2,7 @@
 Version: 1.1.4
 Date: ????
   Changes:
+    - If redrawn_connections_length_multiplier is present at both ends of a new connection, the higher of the two values is taken.
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.3
 Date: 2025-02-04
